--- a/paper.tex
+++ b/paper.tex
@@ -571,7 +571,7 @@ Similarly, we can define $T(S(u,\,v))=Y_{u/a^{3m},\tilde v}(a^{2m})$.
 In view of Lemmas~\ref{xproperties}~and~\ref{yproperties} the map $T$ preserves relations \eqref{add4}--\eqref{conj3}.
 
 It remains to check for $u = Me_1$, $v=M^*e_2$ and $c\in I$ that 
-\begin{equation}T(F(u, bv)) = X_{\tilde u,c/a^{4m}\,\tilde v}(a^{2m}) = Y_{c/a^{4m}\, \tilde u,\tilde v}(a^{2m}) = T(S(ub, v)). \label{eq:last}\end{equation}
+\begin{equation}T(F(u, cv)) = X_{\tilde u,c/a^{4m}\,\tilde v}(a^{2m}) = Y_{c/a^{4m}\, \tilde u,\tilde v}(a^{2m}) = T(S(uc, v)). \label{eq:last}\end{equation}
 Here $\tilde u, \tilde v \in B^n$ are liftings of $u$ and $v$ such that $\lambda_a(\tilde u)=a^m u$, $\lambda_a(\tilde v)=a^m v$ and $\tilde u^t \tilde v = 0$.
 We can also assume that $m$ is so large that $a^{2m}\in I(\tilde{u})\cap I(\tilde{v})$ and there exist $\tilde{x}$, $\tilde{y}$ such that the following equations hold:
 $$\lambda_a(\tilde{x})=a^mMe_3,\ \lambda_a(\tilde{y})=a^mM^*e_3\text{ and }\tilde{x}^t\tilde{y}=a^{2m},\ \tilde{x}^t\tilde{v} = 0,\ \tilde{u}^t\tilde{y} =0.$$
