--- a/paper.tex
+++ b/paper.tex
@@ -265,6 +265,8 @@ After applying additivity relations \eqref{add2}, \eqref{add3} and moving the fa
 one gets the following expression
 $$(X(e_j, \eta'e_k) \cdot X(e_i, (\xi' \eta' + \pi(\xi)\eta' + \pi(\eta)\xi')e_k \cdot X(e_j, -\eta'e_k),\ x_{ik}(\pi(\xi\eta)).$$
 Since $\xi'\eta' + \pi(\xi)\eta' + \pi(\eta)\xi' = \xi\eta - \pi(\xi\eta)$ the above expression clearly simplifies to $\psi(x_{ik}(\xi\eta))$, as claimed.
+Verification of the fact that $\psi$ preserves relations \eqref{add0}, \eqref{ccf2} is similar to the above computation but is easier.
+In particular, one does not need to use relation~\eqref{add3}.
 
 It remains to check that the map $\varphi$ given by $\varphi\left((X(u, v), 1)\right) = X(u, v),$ $\varphi\left((1, x_{ij}(\xi))\right) = X(e_i, \sigma(\xi)e_j)$
 is well-defined and inverse to $\psi$.
@@ -273,7 +275,8 @@ is well-defined and inverse to $\psi$.
 \begin{rk} \label{rk:T123'} Notice that from the proof of the above proposition it follows that one could replace the family of relations \eqref{add3}
 in the definition of $\St(n, R, I)$ with the following smaller family:
 \setcounter{equation}{2} \renewcommand{\theequation}{T\arabic{equation}'}
-\begin{equation} X(e_ir+e_j,\,e_k)=X(e_i,\,rae_k)X(e_j,\,ae_k)\,\text{ for }r\in R,\ a\in I\text{ and } i,j,k\text{ distinct}. \label{add3'} \end{equation} \end{rk}
+\begin{equation} X(e_ir+e_j,\,e_k)=X(e_i,\,rae_k)X(e_j,\,ae_k)\,\text{ for }r\in R,\ a\in I\text{ and } i,j,k\text{ distinct}. \label{add3'} \end{equation} 
+This is because only this smaller family of relations is actually used during the construction of $\psi$. \end{rk}
 
 Both ``another presentations'' of van der Kallen and Tulenbaev are given in terms of generators parametrised by pairs of vectors,
  where the first one is ``good'' in some sense  (i.\,e. unimodular or a column of an elementary matrix) while the second one is arbitrary.
