Fixed more comments

--- a/paper.bib
+++ b/paper.bib
@@ -215,6 +215,15 @@ issue = {1},
 pages = {131--144},
 doi = {10.1070/SM1983v045n01ABEH002591}}
 
+@article{Tul0,
+title = {Schur multiplier of a group of elementary matrices of finite order},
+author = {Tulenbaev, M.~S.},
+journal = {J. Math. Sci.},
+year = {1981},
+number = {4},
+pages = {2062--2067},
+volume = {17}}
+
 @article{Sw71,
 title = {Excision in Algebraic $\mathrm{K}$-theory},
 author = {Swan, R.~G.},
