--- a/paper.tex
+++ b/paper.tex
@@ -126,7 +126,7 @@ and the explicit list of relations called Steinberg relations (see~\cref{sec:pre
 It is classically known that $\Kt(\Phi, R)$ is a central subgroup of $\St(\Phi, R)$ if $R$ is a commutative local ring and $\Phi$ has rank $\geq 2$, see \cite{St73}.
 We refer to the latter statement as the ``centrality of $\Kt$''.
 In~\cite{vdK} using the technique called ``another presentation'' W. van~der~Kallen has shown that the centrality of $\Kt$ holds for $\Phi=\rA_\ell$, $\ell\geq 3$ and arbitrary commutative ring $R$.
-Using similar ideas Tulenbaev in~\cite{Tul0} has further generalised van~der~Kallen's result to associative rings that are module-finite over their centres.
+Using similar ideas Tulenbaev in~\cite{Tul0} further generalised van~der~Kallen's result to associative rings that are module-finite over their centres.
 
 Thus, it is natural to expect that the centrality of $\Kt$ holds for arbitrary commutative rings and different types of Chevalley groups, as well.
 In \cite{Lav}, \cite{SCh} the authors of the present paper have established the centrality of $\Kt(\rC_\ell, R)$ for $\ell\geq 3$ and $\Kt(\rE_\ell, R)$, $\ell=6,7,8$.
