Rewritten the introduction

--- a/paper.bib
+++ b/paper.bib
@@ -166,6 +166,17 @@ year = {1978},
 pages = {77--108},
 doi = {10.4099/math1924.4.77}}
 
+@article{KaS,
+title = {On the Schur multipliers of Steinberg and Chevalley groups over commutative rings},
+author = {van der Kallen, Wilberd and Stein, Michael R},
+journal = {Mathematische Zeitschrift},
+year = {1977},
+number = {1},
+pages = {83--94},
+volume = {155},
+doi = {10.1007/BF01322610}}
+
+
 @article{Sus,
 author = {Suslin, A.},
 title = {On the structure of the special linear group over commutative rings},
@@ -288,3 +299,10 @@ author={Milnor, J.},
 year={1971},
 pages={184 p.},
 publisher={Princeton Univ. Press}}
+
+@Book{Kbook,
+title = {The $K$-book: An introduction to algebraic $K$-theory},
+author = {Weibel, Charles A},
+volume = {145},
+year = {2013},
+publisher = {Amer. Math. Soc.}}
