--- a/paper.bib
+++ b/paper.bib
@@ -42,7 +42,7 @@ doi = {10.1090/S1061-0022-2012-01210-0}}
 @inproceedings{Ta,
 author = {G.~Taddei},
 title = {Normalit\'e des groupes \'el\'ementaires dans les groupes de Chevalley sur un anneau},
-booktitle = {Applications of algebraic $\K$-theory to algebraic geometry and number theory, Part II (Boulder, Colo., 1983)},
+booktitle = {Applications of algebraic $\mathrm{K}$-theory to algebraic geometry and number theory, Part II (Boulder, Colo., 1983)},
 series = {Contemp. Math},
 year = {1986},
 volume = {55},
@@ -168,14 +168,13 @@ doi = {10.4099/math1924.4.77}}
 
 @article{KaS,
 title = {On the Schur multipliers of Steinberg and Chevalley groups over commutative rings},
-author = {van der Kallen, Wilberd and Stein, Michael R},
+author = {van der Kallen, W. and Stein, M.~R.},
 journal = {Mathematische Zeitschrift},
 year = {1977},
 number = {1},
 pages = {83--94},
 volume = {155},
 doi = {10.1007/BF01322610}}
-
 
 @article{Sus,
 author = {Suslin, A.},
@@ -302,7 +301,7 @@ publisher={Princeton Univ. Press}}
 
 @Book{Kbook,
 title = {The $K$-book: An introduction to algebraic $K$-theory},
-author = {Weibel, Charles A},
+author = {Weibel, C.~A.},
 volume = {145},
 year = {2013},
 publisher = {Amer. Math. Soc.}}
