--- a/paper.bib
+++ b/paper.bib
@@ -1,3 +1,12 @@
+@article{Basu05,
+title = {On Quillen's Local Global Principle},
+author = {Basu, R. and Rao, R. and Khanna, R.},
+journal = {Contemp. Math.},
+year = {2005},
+pages = {17},
+volume = {390},
+doi = {10.1090/conm/390/07291}}
+
 @article{SCh,
 author = {Sinchuk, S.},
 title = {On centrality of $\mathrm{K}_2$ for {C}hevalley groups of type $\rE_\ell$},
