--- a/paper.bib
+++ b/paper.bib
@@ -1,5 +1,5 @@
 @article{Basu05,
-title = {On Quillen's Local Global Principle},
+title = {On Quillen's local-global principle},
 author = {Basu, R. and Rao, R. and Khanna, R.},
 journal = {Contemp. Math.},
 year = {2005},
@@ -178,7 +178,7 @@ doi = {10.4099/math1924.4.77}}
 @article{KaS,
 title = {On the Schur multipliers of Steinberg and Chevalley groups over commutative rings},
 author = {van der Kallen, W. and Stein, M.~R.},
-journal = {Mathematische Zeitschrift},
+journal = {Math. Z.},
 year = {1977},
 number = {1},
 pages = {83--94},
