--- a/paper.tex
+++ b/paper.tex
@@ -124,7 +124,7 @@ Thus, similarly to the definition of algebraic $\mathrm{SK}_1$ and $\Kt$-functor
 $$\xymatrix{1 \ar[r] & \Kt(\Phi, R) \ar[r] & \St(\Phi, R) \ar[r] & \GG(\Phi, R) \ar[r] & \Ko(\Phi, R) \ar[r] & 1.}$$
 
 It is a classical theorem of M.~Kervaire and R.~Steinberg that the stable Steinberg group $\St(R)$ is the universal central extension of $\E(R)$, see \cite[Theorem~III.5.5]{Kbook}.
-The unstable analogue of the ``universality'' part of this theorem is known since 1970's from the works of M.~Stein and W.~van~der~Kallen for $\Phi$ with rank $\ell \geq 5$ (or even $\ell \geq 4$ for $\Phi=\rA_\ell, \rB_\ell, \rC_\ell$), see \cite{St1, KaS}.
+The unstable analogue of the ``universality'' part of this theorem has been known since 1970's for $\Phi$ with of $\ell \geq 5$ (or even $\ell \geq 4$ for $\Phi=\rA_\ell, \rB_\ell, \rC_\ell$), see \cite{St1, KaS}.
 However, until recently, the analogue of the ``centrality'' part was only known in the special case $\Phi=\rA_\ell$, $\ell\geq 3$ see~\cite[Corollary~2]{vdK}.
 The best known result for other classical $\Phi$ was that the centrality holds ``in the stable range'',
 i.\,e. when the dimension of $R$ is suffiently small as compared to the rank of $\Phi$, see~\cite[Corollary~3.4]{St78}.
@@ -134,38 +134,26 @@ In turn, the key result of this paper is the following theorem.
 \begin{tm}[``Centrality of $\Kt$''] \label{tm:centrality}  Let $R$ be an arbitrary commutative ring.
 Then for $\ell\geq 4$ the group $\Kt(\rD_\ell, R)$ is a central subgroup of $\St(\rD_\ell, R)$. \end{tm}
 
-Centrality of $\Kt$ follows the following the following analogue of Quillen's local-global principle,
-very much in the same fashion as the normality theorem for the elementary subgroup follows from Quillen's local-global principle for $\Ko$, cf.~\cite[Theorem~3.1]{Basu05}.
+Centrality of $\Kt$ is a corollary of the following analogue of Quillen's local-global principle,
+very much in the same fashion as the normality theorem for the elementary subgroup is a corollary of the local-global principle for $\Ko$, cf.~\cite[Theorem~3.1]{Basu05}.
 \begin{tm}[``Quillen's LG-principle for $\Kt$''] \label{tm:lg-principle} 
 Let $\Phi$ be an irreducible simply-laced root system of rank $\geq 3$ and $R$ be arbitrary commutative ring.
 Then an element $g\in\St(\Phi,\,R[X])$ satisfying $g(0)=1\in\St(\Phi,\,R)$ is trivial in $\St(\Phi,\,R[X])$
 if and only if the images $\lambda_M^*(g)\in\St(\Phi,\,R_M[X])$ of $g$ under localisation maps $\lambda_M\colon R\to R_M$ are trivial for all maximal ideals $M\trianglelefteq R$. \end{tm}
-For the proof of the claim that \cref{tm:lg-principle} follows from \cref{tm:centrality} we refer the reader to the proof of Theorem~1 in \cite{SCh} (which works verbatim in our situation).
+For the proof of the claim that \cref{tm:lg-principle} follows from \cref{tm:centrality} we refer the reader to \cite{SCh} (cf. with the proof of Theorem~1 ibid.).
 
-\cref{tm:lg-principle} was known previously in the following two special cases.
-\begin{itemize}
- \item In the case $\Phi=\rA_\ell$, $\ell\geq 4$ it was proved by Tulenbaev, see~\cite[Theorem~2.1]{Tul}. 
- \item In the case $\Phi=\rE_\ell$, $\ell=6,7,8$ it was obtained in~\cite{SCh} by the second-named author.
-\end{itemize}
-Thus, the special cases $\Phi=\rA_3$ and $\Phi=\rD_\ell$, $\ell\geq 4$ of \cref{tm:lg-principle} are new and have not been known before.
-
-Notice that the first-named author has recently established the local-global principle for $\Kt(\rC_\ell, R)$ under the assumption $\ell\geq 3$.
-The main shortcoming of Tulenbaev's proof is that it left the case $\Phi=\rA_3$ unsettled.
-
-Since there are known counterexamples to centrality of $\Kt$ in the rank $2$ case (see~\cite{W}), our assumption on the rank of $\Phi$ in \cref{tm:lg-principle} can not be weakened.
-
-Compare \cref{tm:lg-principle} with the local-global principle for $\Ko$ which states that an element of the congruence subgroup $g\in \GG(\Phi,\,R[X], XR[X])$ is elementary
-(i.\,e. lies in $\E(\Phi, R[X])$) if and only if $g_M=1\in\E(\Phi,\,R_M)$ for all maximal ideals $M \trianglelefteq R$.
-
-Our proof of \cref{tm:lg-principle} is similar to that of \cite[Theorem~1]{SCh}.
-Using the same patching technique we reduce the problem to the case $\Phi=\rA_3$.
-Then, using a new presentation of the relative Steinberg group $\St(4, R, I)$ we reprove Tulenbaev's key lemma (cf. \cite[Lemma~2.3]{Tul}) in the rank $3$ case.
+In the special case $\Phi=\rA_\ell$, $\ell\geq 4$ the assertion of \cref{tm:lg-principle} was obtained by Tulenbaev, see~\cite[Theorem~2.1]{Tul}.
+Despite the fact that the key ingredient in Tulenbaev's proof (``another presentation'' of the Steinberg group) is available for $\Phi=\rA_3$, Tulenbaev's proof does not work in this case for technical reasons.
+On the other hand, in~\cite{SCh} the second-named author developed a patching technique which allowed him to deduce \cref{tm:lg-principle} from Tulenbaev's result in another special case $\Phi=\rE_\ell$, $\ell=6,7,8$.
+Thus, \cref{tm:lg-principle} contains two cases that have not been previously known: $\Phi=\rA_3$ and $\Phi=\rD_\ell$, $\ell\geq 4$.
+We also note that recently the first-named author has obtained an analogue of \cref{tm:lg-principle} for $\Kt(\rC_\ell, R)$ under the assumption $\ell\geq 3$.
 
 The rest of the paper is organised as follows. 
-In \cref{sec:yap} we describe a new symmetric presentation for the relative Steinberg group of rank $3$.
-This presentation is then used in~\cref{sec:lgp} to establish the particular case $\Phi=\rA_3$ of \cref{tm:lg-principle}.
+In \cref{sec:patching} we explain how \cref{tm:lg-principle} can be reduced to its own special case $\Phi=\rA_3$ by means of the patching technique of~\cite{SCh}.
+Next, in \cref{sec:yap} we describe a new ``transpose-symmetric'' presentation for the relative linear Steinberg group. 
+Finally, we use this presentation in~\cref{sec:lgp} where we prove \cref{tm:lg-principle} in the case $\Phi=\rA_3$.
 %It mimics the standart vector representation of $\SL(n,\,R)$, therefore in the first section we use representations and corresponding vector notation. 
-Finally, in \cref{sec:patching} we derive our principal results from this special case and the amalgamation theorem for relative Steinberg groups from~\cite{SCh}.
+%Finally, in \cref{sec:patching} we derive our principal results from this special case and the amalgamation theorem for relative Steinberg groups from~\cite{SCh}.
 %There we switch to the root notation.
 
 \section{Preliminaries} \label{sec:prelim}
@@ -226,7 +214,7 @@ For a general $I$ the relative Steinberg group $\St(\Phi, R, I)$ is no more a su
 For the purposes of the present text it suffices to consider only relative Steinberg groups corresponding to splitting ideals.
 For more information regarding the general case we refer the reader to \cite[Section~3]{SCh}.
 
-\section{Yet another presentation for the relative Steinberg group.} \label{sec:yap}
+\section{Main reduction} \label{sec:patching}
 The key ingredient in Tulenbaev's proof of the local-global principle is the construction of the homomorphism $T$ which fits into the following commutative diagram.
 \numberwithin{equation}{section}
 \begin{equation} \xymatrix{\St(n,\,R\ltimes XR_a[X],\,XR_a[X]) \ar@{^{(}->}[r] \ar[d]_-{\lambda_a^*} & \St(n, R \ltimes XR_a[X]) \ar[d]_-{\lambda_a^*} \\
@@ -240,6 +228,18 @@ It is clear that the image of $T$ is contained in the image of the top arrow, th
 
 %To prove the local--global principle for Steinberg groups of type $\mathrm D_l$ and centrality 
 %of $\mathrm K_2(\mathrm D_l,\,R)$ we need such a map for $n=4$ (i.e., for the group of type $\mathrm A_3$).
+
+
+%Since there are known counterexamples to centrality of $\Kt$ and, thus, to \cref{tm:lg-principle} for $\Phi$ of rank $2$ (see~\cite{W}), 
+%this gives a complete answer to the question for which $\ell$ the local-global principle holds for $\Kt(\rC_\ell, R)$.
+
+%The main idea of our proof of~\cref{tm:lg-principle} is to first settle the case $\Phi=\rA_3$ and then derive the other cases from it using the patching technique of~\cite{SCh}.
+
+%Compare \cref{tm:lg-principle} with the local-global principle for $\Ko$ which states that an element of the congruence subgroup $g\in \GG(\Phi,\,R[X], XR[X])$ is elementary
+%(i.\,e. lies in $\E(\Phi, R[X])$) if and only if $\lambda_M^*(g)=1\in\E(\Phi,\,R_M[X])$ for all maximal ideals $M \trianglelefteq R$.
+
+
+\section{Yet another presentation for the relative Steinberg group.} \label{sec:yap}
 
 In order to construct the arrow $T$ Tulenbaev uses the following presentation for the relative Steinberg group, see~\cite[Proposition~1.6]{Tul}. 
 %Assume that $I\trianglelefteq R$ such that a short exact sequence
